tests/examples/bad/class_member_field_access_not_a_class.lat
int main() {
    int var;
    var.b;
    return 1;
}
 
class A {
    int a;
}

